remove prize button and start with suggestion selected

--- a/static/index.html
+++ b/static/index.html
@@ -37,7 +37,7 @@
         <div class="description-container">
           Description for
           <span class="type-container" id="type">
-            <label><input type="radio" name="type" value="suggestion" /> Suggestion</label>
+            <label><input type="radio" name="type" value="suggestion" checked /> Suggestion</label>
             <label onclick="appendBugText(event)"><input id="bug-input" type="radio" name="type" value="bug" /> Bug</label>
           </span>
           <div><textarea id="description"></textarea></div>
