--- a/static/thanks.html
+++ b/static/thanks.html
@@ -10,7 +10,7 @@
 
       <div class="half-size">
         <a href="/">FILE MORE FEEDBACK</a>
-        <a href="/prize.html">CLAIM YOUR PRIZE</a>
+        <!-- <a href="/prize.html">CLAIM YOUR PRIZE</a> -->
       <div>
     </div>
   </body>
